--- a/index.html
+++ b/index.html
@@ -702,18 +702,18 @@
 
         // Momo data
         const momosData = [
-            { id: 1, name: "Veg Momos", price: 80, type: "veg", image: "https://images.unsplash.com/photo-1603133872878-684f208fb84b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" },
-            { id: 2, name: "Chicken Momos", price: 100, type: "non-veg", image: "https://images.unsplash.com/photo-1565299624946-b28f40a0ca4b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1173&q=80" },
-            { id: 3, name: "Paneer Momos", price: 90, type: "veg", image: "https://images.unsplash.com/photo-1555939594-58d7cb561ad1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" },
-            { id: 4, name: "Mutton Momos", price: 110, type: "non-veg", image: "https://images.unsplash.com/photo-1565299624946-b28f40a0ca4b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1173&q=80" },
-            { id: 5, name: "Corn Momos", price: 70, type: "veg", image: "https://images.unsplash.com/photo-1555939594-58d7cb561ad1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" },
-            { id: 6, name: "Fish Momos", price: 100, type: "non-veg", image: "https://images.unsplash.com/photo-1565299624946-b28f40a0ca4b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1173&q=80" },
-            { id: 7, name: "Chocolate Momos", price: 60, type: "veg", image: "https://images.unsplash.com/photo-1555939594-58d7cb561ad1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" },
-            { id: 8, name: "Egg Momos", price: 80, type: "non-veg", image: "https://images.unsplash.com/photo-1565299624946-b28f40a0ca4b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1173&q=80" },
-            { id: 9, name: "Mixed Veg Momos", price: 85, type: "veg", image: "https://images.unsplash.com/photo-1555939594-58d7cb561ad1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" },
-            { id: 10, name: "Tandoori Momos", price: 120, type: "non-veg", image: "https://images.unsplash.com/photo-1565299624946-b28f40a0ca4b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1173&q=80" },
-            { id: 11, name: "Cheese Momos", price: 95, type: "veg", image: "https://images.unsplash.com/photo-1555939594-58d7cb561ad1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" },
-            { id: 12, name: "Schezwan Momos", price: 90, type: "veg", image: "https://images.unsplash.com/photo-1555939594-58d7cb561ad1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" }
+            { id: 1, name: "Veg Momos", price: 80, type: "veg", image: "veg momos.jpg" },
+            { id: 2, name: "Chicken Momos", price: 100, type: "non-veg", image: "chicken momos" },
+            { id: 3, name: "Paneer Momos", price: 90, type: "veg", image: "paneer momos" },
+            { id: 4, name: "Mutton Momos", price: 110, type: "non-veg", image: "Mutton momos" },
+            { id: 5, name: "Corn Momos", price: 70, type: "veg", image: "corn momos" },
+            { id: 6, name: "Fish Momos", price: 100, type: "non-veg", image: "fish momos" },
+            { id: 7, name: "Chocolate Momos", price: 60, type: "veg", image: "chocolate momos" },
+            { id: 8, name: "Egg Momos", price: 80, type: "non-veg", image: "egg momos" },
+            { id: 9, name: "Mixed Veg Momos", price: 85, type: "veg", image: "mixed veg momos" },
+            { id: 10, name: "Tandoori Momos", price: 120, type: "non-veg", image: "Tandoori Momos" },
+            { id: 11, name: "Cheese Momos", price: 95, type: "veg", image: "Cheese Momos" },
+            { id: 12, name: "Schezwan Momos", price: 90, type: "veg", image: "schezwan Momos" }
         ];
 
         // Generate random rating
@@ -759,7 +759,7 @@
                 name: "Chapathi and Dall",
                 price: 30,
                 type: "veg",
-                image: "https://images.unsplash.com/photo-1589302168068-964664d93dc0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+                image: "Chapathi & Dall Combo"
             };
             
             // Find one veg momo
@@ -850,3 +850,4 @@
     </script>
 </body>
 </html>
+
