--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
         <div class="container">
             <div class="combo-container">
                 <div class="combo-img">
-                    <img src="https://images.unsplash.com/photo-1589302168068-964664d93dc0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="Chapathi and Dall">
+                    <img src="Chapathi & Dall Combo">
                 </div>
                 <div class="combo-content">
                     <h2>Chapathi & Dall Combo</h2>
@@ -850,4 +850,5 @@
     </script>
 </body>
 </html>
+
 
